# bluegold-trading

./: .flake8  .gitignore  README.md  config.example.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: flake8.yml  pylance.yml
bluegold_trading/: __init__.py  cli.py  config.py
bluegold_trading/brokers/: alpaca.py  base.py
bluegold_trading/core/: engine.py  models.py
bluegold_trading/signals/: base.py  bluegold_api.py
bluegold_trading/triggers/: __init__.py  base.py  polling.py  scheduled.py
