[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bluegold-trading"
version = "0.1.0"
description = "Automated trade execution — fetch target allocations and rebalance through your brokerage."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "alpaca-py>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
    "apscheduler>=3.10,<4",
    "pydantic>=2.5",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
bluegold-trading = "bluegold_trading.cli:main"

[tool.setuptools.packages.find]
include = ["bluegold_trading*"]

[tool.ruff]
target-version = "py311"
line-length = 100
